[gd_scene load_steps=8 format=3 uid="uid://dcgl7maiwokab"]

[ext_resource type="Script" path="res://jason_test/teapot.gd" id="1_87yhw"]
[ext_resource type="Shader" path="res://jason_test/enemy_0.gdshader" id="2_cux7i"]
[ext_resource type="Texture2D" uid="uid://dh4kkaahpo5gd" path="res://jason_test/teapot.png" id="4_a758d"]
[ext_resource type="AudioStream" uid="uid://rjij877mnjgc" path="res://Assets/Audio/SFX/shoot_teapot_enemy1.wav" id="4_leb72"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mb7tq"]
radius = 3.16424

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdm5j"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_cux7i")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/active = false
shader_parameter/sprite_texture = ExtResource("4_a758d")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j3ibh"]
height = 0.169
radius = 0.08

[node name="teapot" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1.14544, 0, 0, 0, 1.14544, 0, 0, 0, 1.14544, 0.00015673, 0.0152056, -0.0002729)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_87yhw")

[node name="LineOfSight" type="RayCast3D" parent="."]
transform = Transform3D(0.7269, 0, 0, 0, -1.60176e-07, -1, 0, 3.66441, -4.37114e-08, 0.00666908, -0.00430323, 0.00419959)
collision_mask = 5

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.92334, 0, 0, 0, 1.00109, 0, 0, 0, 1.4979, 0, 0, 0)
collision_layer = 2
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.220594, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_mb7tq")

[node name="vision" type="Node3D" parent="."]
transform = Transform3D(0.128427, 0, 0, 0, 0.128427, 0, 0, 0, 0.128427, 0, 0, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.998043, 0, 0, 0, 0.998043, 0, 0, 0, 0.998043, 0, 0, 0)
material_override = SubResource("ShaderMaterial_qdm5j")
billboard = 1
texture_filter = 0
texture = ExtResource("4_a758d")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_j3ibh")

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_leb72")
volume_db = -4.446

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
